use jquery and twitter bootstrap

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Session</title>
-  <%= stylesheet_link_tag    "core", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag    "bootstrap", "bootstrap-responsive", :media => "all" %>
+  <%= javascript_include_tag "jquery", "bootstrap" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
