--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,25 +1,16 @@
-<h1>Listing posts</h1>
-
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Content</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
 <% @posts.each do |post| %>
-  <tr>
-    <td><%= post.title %></td>
-    <td><%= post.content %></td>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+
+  <div class="hero-unit">
+    <h1><%= post.title %></h1>
+    <p><%= post.content %></p>
+    <p><%= link_to 'View detail', post, :class => 'btn' %></p>
+  </div>
+
 <% end %>
-</table>
+
 
 <br />
 
-<%= link_to 'New Post', new_post_path %>
+<div class="hero-unit narrow">
+<%= link_to 'New Post', new_post_path, :class => 'btn btn-primary' %>
+</div>
