--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@post) do |f| %>
+<%= form_for(@post, :html => {:class => "form-horizontal"}) do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -11,15 +11,22 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :content %><br />
-    <%= f.text_area :content %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <fieldset>
+    <div class="control-group">
+      <%= f.label :title, :class => "control-label" %>
+      <div class="controls">
+        <%= f.text_field :title, :class => "input-xlarge span5" %>
+      </div>
+    </div>
+    <div class="control-group">
+      <%= f.label :content, :class => "control-label" %>
+      <div class="controls">
+        <%= f.text_area :content, :class => "input-xlarge span5", :rows => "20" %>
+      </div>
+    </div>
+    <div class="form-actions">
+      <%= f.submit :class => "btn btn-primary" %>
+    </div>
+  </fieldset>
+
 <% end %>
