--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,15 +1,17 @@
-<p id="notice"><%= notice %></p>
+<% if notice %>
+  <div class="alert alert-success">
+    <span id="notice"><%= notice %></span>
+  </div>
+<% end %>
 
-<p>
-  <b>Title:</b>
-  <%= @post.title %>
-</p>
+<div class="hero-unit narrow">
+  <h2><%= @post.title %></h2>
+</div>
 
-<p>
-  <b>Content:</b>
-  <%= @post.content %>
-</p>
+<div class="hero-unit">
+  <p>
+    <%= @post.content %>
+  </p>
+</div>
 
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', posts_path, :class => "btn" %>
