add error class to form error information

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@post, :html => {:class => "form-horizontal"}) do |f| %>
   <% if @post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
+    <div id="error_explanation" class="alert alert-error">
+      <p><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</p>
 
       <ul>
       <% @post.errors.full_messages.each do |msg| %>
