change title of the web page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Session</title>
+  <title>Blog</title>
   <%= stylesheet_link_tag    "bootstrap", "bootstrap-responsive", "core", :media => "all" %>
   <%= javascript_include_tag "jquery", "bootstrap" %>
   <%= csrf_meta_tags %>
