--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
 
   <div class="container">
 
-    <div class="hero-unit narrow">
+    <div class="blog-header hero-unit narrow">
       <div class="span3 offset7 clearfix">
         <%= link_to 'New Post', new_post_path, :class => 'btn btn-primary' %>
       </div>
