tweak some ui style

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
   <div class="container">
 
     <div class="blog-header hero-unit narrow">
-      <div class="span3 offset7 clearfix">
+      <div class="actions">
         <%= link_to 'New Post', new_post_path, :class => 'btn btn-primary' %>
       </div>
       <h1><%= link_to "My Blog", posts_path %></h1>
