Make view details a link instead of button.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,11 +3,10 @@
   <div class="hero-unit">
     <h1><%= post.title %></h1>
     <p><%= post.content %></p>
-    <p><%= link_to 'View detail', post, :class => 'btn' %></p>
+    <p><%= link_to 'View detail', post %></p>
   </div>
 
 <% end %>
-
 
 <br />
 
