Now we can delete a post! yeah!

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,4 +14,5 @@
   </p>
 </div>
 
+<%= button_to 'Delete', @post, :method => 'delete', :class => 'btn' %>
 <%= link_to 'Back', posts_path, :class => "btn" %>
